code/out-run.txt
  File "/home/project/13003073/LW/GitHub/Molecular-Dynamics/code/maintrain.py", line 150
    filename = f'./{maindict["save_dir"]}/{args['model_name']_{e+1:06d}.pth'
                                                 ^^^^^^^^^^
SyntaxError: f-string: unmatched '['
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
			Resource Usage on 2025-08-21 19:30:07.803938:
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
	JobId: 76831.pbs111
	Project: 13003073
	Exit Status: 1
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
	NCPUs: Requested(14), Used(14)
	CPU Time Used: 00:00:00
	Memory: Requested(235gb), Used(41836kb)
	Vmem Used: 16660kb
	Walltime: Requested(24:00:00), Used(00:00:03)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
	Execution Nodes Used: (a2ap-dgx035:ngpus=1:mem=246415360kb:ncpus=14)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
	GPU Duration: 7.12secs
	GPU Power Consumed: 0W
	GPU Max GPU Memory Used: 0.0B
	Memory Throughput Rate (Average): a2ap-dgx035:(gpu1:0%)
	Memory Throughput Rate (Max): a2ap-dgx035:(gpu1:0%)
	Memory Throughput Rate (Min): a2ap-dgx035:(gpu1:0%)
	GPU SM Utilization (Average): a2ap-dgx035:(gpu1:0%)
	GPU SM Utilization (Max): a2ap-dgx035:(gpu1:0%)
	GPU SM Utilization (Min): a2ap-dgx035:(gpu1:0%)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Warning: All GPUs have a percentage of 0 utilisation.
GPU application profile: Idle
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

